# agno-dev

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/commands/: new-game-dev-agent.md
.cursor/rules/: agno-game-dev-crew.mdc
.cursor/skills/game-dev-crew/: SKILL.md
docs/: agentos-and-sqlite.md
game_dev_crew/: __init__.py  __main__.py  agent_os_app.py  agent_os_config.yaml  cli.py  cli_commands.py  component_persistence.py  config.py  knowledge.py  os_db_debug_router.py  os_routes.py  tracing.py
game_dev_crew/crew/: __init__.py  agents.py  meta.py  teams.py
game_dev_crew/instructions/: auditor.md  game_design.md  reviewer.md  senior_developer.md  storytelling.md  team_leader.md  ui_ux.md
game_dev_crew/knowledge_seed/: crew_overview.md  silent_dungeon_premise.md  silent_dungeon_scene_workflow.md  silent_dungeon_world_and_mechanics.md
game_dev_crew/tools/: __init__.py  allowlisted_shell.py  policy.py  repo_glob.py  repo_read.py  repo_write.py  validate_scenes.py
game_dev_crew/workflow/: __init__.py  audit_flow.py  git_isolation.py  registry_functions.py  reviewer_parse.py  scene_generation_flow.py
tests/: conftest.py  test_audit_flow_writes.py  test_config.py  test_git_isolation.py  test_os_workflows_list.py  test_repo_write.py  test_reviewer_parse.py  test_scene_generation_flow.py  test_workflow_registry_functions.py
